update method assignInvigilators